p3/deployment/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
    - port: 8888
      targetPort: 8888
