p3/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
spec:
  defaultBackend:
    service:
      name: playground-service
      port:
        number: 8888
